# QT_Project

./: CMakeLists.txt  README.md  main.cpp
data/: score.csv
src/: Entity.cpp  Entity.h  Game.cpp  Game.h  MainWindow.cpp  MainWindow.h  MyScene.cpp  MyScene.h  main.cpp  settings.h
src/Entity/: Alien.cpp  Alien.h  Character.cpp  Character.h  projectile.h
src2/: Entity.cpp  Game.cpp  Game.h  Scoreboard.cpp  Scoreboard.h  SpaceInvaders.cpp  SpaceInvaders.h  component.cpp  component.h  main.cpp  settings.h
